# sdsl4py

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.py
sdsl4py/: compressed_int_vector.cpp  enc_vector.cpp  int_vector.cpp  sdsl4py.cpp
tests/: test_encoded_vectors.py  test_int_vector.py
